@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.cc,v $
-// Revision      : $Revision: 1.62 $
-// Revision date : $Date: 2006/01/01 16:44:52 $
+// Revision      : $Revision: 1.63 $
+// Revision date : $Date: 2006/01/03 22:53:58 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
@@ -101,19 +101,6 @@ extern "C" {
 // ============================================================================
 Biff::Biff (guint ui_mode, std::string filename)
 {
-	// Get password table from configure option
-#ifdef USE_PASSWORD
-	passtable_ = PASSWORD_STRING;
-	// Add something (in case the provided string is not long enough)
-	passtable_ += "FEDCBA9876543210";
-	//  and then we remove duplicated characters
-	std::string buffer;
-	for (std::string::size_type i = 0; i < passtable_.size(); i++)
-		if (buffer.find(passtable_[i]) == std::string::npos)
-			buffer += passtable_[i];
-	passtable_ = buffer;
-#endif
-
 	mutex_ = g_mutex_new ();
 
 	// Authentication mutex
@@ -641,6 +628,15 @@ Biff::upgrade_options (void)
 				g_free (base);
 			}
 		}
+
+#ifdef USE_PASSWORD
+		// Option: PASSWORD
+		if (version < 2002000) {
+			std::string passphrase = value_string ("passphrase");
+			mb->password (Decoding::decrypt_password_legacy (passphrase,
+															 mb->password ()));
+		}
+#endif
 	}
 
 	// End message
@@ -744,17 +740,9 @@ Biff::save (void)
 	std::map<std::string,std::string> name_value;
 	g_mutex_lock (mutex_);
 	for (unsigned int i=0; i< mailbox_.size(); i++) {
-#ifdef USE_PASSWORD
-		// Encrypt password
-		mailbox_[i]->value ("password", Decoding::encrypt_password (mailbox_[i]->value_string ("password"), passtable_));
-#endif
 		// Save options
 		mailbox_[i]->to_strings (OPTGRP_MAILBOX, name_value);
 		save_parameters (name_value, "mailbox");
-#ifdef USE_PASSWORD
-		// Decrypt password
-		mailbox_[i]->value ("password", Decoding::decrypt_password (mailbox_[i]->value_string ("password"), passtable_));
-#endif
 	}
 	g_mutex_unlock (mutex_);
 
@@ -945,10 +933,6 @@ Biff::xml_end_element (GMarkupParseContext *context,
 
 		// Get options
 		mailbox_[pos]->from_strings (OPTGRP_MAILBOX, buffer_load_);
-#ifdef USE_PASSWORD
-		// Decrypt password
-		mailbox_[pos]->value ("password", Decoding::decrypt_password (mailbox_[pos]->value_string ("password"), passtable_));
-#endif
 	}
 	// Options common to all mailboxes
 	else
