@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: biff.h,v $
-// Revision      : $Revision: 1.26 $
-// Revision date : $Date: 2005/12/11 16:45:27 $
+// Revision      : $Revision: 1.27 $
+// Revision date : $Date: 2006/01/01 16:44:52 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
@@ -55,7 +55,7 @@ public:
 	// ========================================================================
 	//  general
 	// ========================================================================
-	std::string		passtable_;					// encryption table
+
 
 protected:
 	// ========================================================================
