@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.cc,v $
-// Revision      : $Revision: 1.84 $
-// Revision date : $Date: 2006/01/01 16:44:53 $
+// Revision      : $Revision: 1.85 $
+// Revision date : $Date: 2006/01/03 22:53:58 $
 // Author(s)     : Nicolas Rougier, Robert Sowada
 // Short         : 
 //
@@ -285,6 +285,16 @@ Mailbox::option_changed (Option *option)
 		return;
 	}
 
+#ifdef USE_PASSWORD
+	// PASSWORD_AES
+	if (option->name() == "password_aes") {
+		std::string decpass = decrypt_aes (biff_->value_string ("passphrase"),
+										   ((Option_String *)option)->value());  
+		value ("password", decpass);
+		return;
+	}
+#endif
+
 	// SEEN
 	if (option->name() == "seen") {
 		get_values ("seen", hidden_, true, false);
@@ -314,6 +324,16 @@ Mailbox::option_update (Option *option)
 {
 	if (!option)
 		return;
+
+#ifdef USE_PASSWORD
+	// PASSWORD_AES
+	if (option->name() == "password_aes") {
+		std::string enc_aes = encrypt_aes (biff_->value_string ("passphrase"),
+										   value_string ("password"));
+		((Option_String *)option)->value (enc_aes);
+		return;
+	}
+#endif
 
 	// SEEN
 	if (option->name() == "seen") {
